--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: lightgray;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+}
+
+header {
+    background-color: white;
 
 }
 
@@ -19,7 +26,116 @@ body {
 
 }
 
+#container {
+    background-color: white;
+    width: 80%;
+    height: 100%;
+    margin: auto;
 
+}
+
+main {
+    width: 80%;
+    height: 700px;
+    background: white;
+    margin: auto;
+    border-radius: 7px;
+    margin-top: 50px;
+
+}
+
+
+.style-button {
+    background-color: blue;
+    color: white;
+    font-weight: 300;
+    border-radius: 5px;
+    padding: 7px;
+    margin-top: 20px;
+    border-color: blue;
+
+}
+
+.style-button2 {
+
+    background-color: white;
+    color: lightgray;
+    border-radius: 5px;
+    padding: 7px;
+    border-color: lightgray;
+
+}
+
+#divider {
+    width: 100%;
+    color: lightgray;
+    height: 2px;
+
+}
+
+.menu {
+    font-size: 20px;
+    font-weight: bold;
+    display: inline;
+    
+}
+
+.no-mark {
+    list-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.side-text {
+    display: inline-block;
+    background-color: orange;
+    border-radius: 10px;
+    width: 10%;
+    height: 30px;
+    text-align: center;
+    font-size: 14px;
+    line-height: 30px;
+    color: white;
+    margin-left: 20px;
+    
+}
+
+#blue {
+    background-color: blue;
+}
+
+#purple {
+    background-color: purple;
+}
+
+#green {
+    background-color: green;
+}
+
+#orange {
+    background-color: orange;
+}
+
+#pink {
+    background-color: pink;
+}
+
+#lightgreen {
+    background-color: lightgreen;
+}
+
+.check {
+    color: green;
+    border-style: solid;
+    border-radius: 100%;
+}
+
+.cross {
+    color: red;
+    border-style: solid;
+    border-radius: 100%;
+}
 
 
 
